# django-for-beginners

./: README.md
code/ch1-setup/: pyproject.toml
code/ch1-setup/django_project/: settings.py
code/helloworld/: pyproject.toml
code/helloworld/django_project/: settings.py  urls.py
code/helloworld/pages/: urls.py  views.py
code/pages/django_project/: settings.py
